--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
   </head>
   <body>
     <header>
-      <h1>第4回めんたいこ杯争奪弓道大会</h1>
-      <p>団体戦 リアルタイム速報</p>
+      <h1>めんたいカップ</h1>
+      <p>リアルタイム速報</p>
     </header>
 
     <main>
@@ -305,7 +305,7 @@
       <div id="app" class="ranking-grid" style="display: none"></div>
     </main>
 
-    <footer>&copy; 2025 Mentai-ko Cup Committee. All rights reserved.</footer>
+    <footer>&copy; MentaiCup HeadQuarters. All rights reserved.</footer>
 
     <script>
       // エラーログを収集するためのラッパー関数
