--- a/index.html
+++ b/index.html
@@ -339,8 +339,10 @@
   </head>
   <body>
     <header>
-      <h1>めんたいカップ ２０２６</h1>
-      <p>リアルタイム速報</p>
+      <h1>めんたいカップ２０２６成績閲覧ページへようこそ</h1>
+      <p>
+        最新のスコアと成績をチェックし、大会のハイライトや参加選手のパフォーマンスを見つけましょう
+      </p>
     </header>
 
     <main>
