--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
       </div>
     </div>
     <header>
-      <h1>めんたいカップ２０２６成績閲覧ページへようこそ</h1>
+      <h1>めんたいカップ２０２６<br />成績閲覧ページへようこそ</h1>
       <p>
-        最新のスコアと成績をチェックし、大会のハイライトや参加選手のパフォーマンスを見つけましょう
+        最新のスコアと成績をチェックし、<br />大会のハイライトや参加選手のパフォーマンスを見つけましょう
       </p>
     </header>
 
