--- a/input.html
+++ b/input.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>成績・進行管理 - 第4回めんたいこ杯</title>
+    <title>めんたいカップ - 成績・進行管理</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -736,3 +736,4 @@
     </script>
   </body>
 </html>
+
